--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "savvy",
   "version": "0.0.1",
   "description": "Read .sav files in a browser",
-  "main": "index.js",
+  "main": "./dist/savvy.js",
   "scripts": {
+    "start": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,9 +20,11 @@
   "devDependencies": {
     "@babel/core": "^7.11.6",
     "@babel/preset-env": "^7.11.5",
+    "@types/node": "^14.11.2",
     "babel-loader": "^8.1.0",
     "ts-loader": "^8.0.4",
     "tslint": "^6.1.3",
+    "typescript": "^4.0.3",
     "webpack-node-externals": "^2.5.2"
   }
 }
