--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./dist/savvy.js",
   "scripts": {
     "start": "webpack",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node ./test.js"
   },
   "repository": {
     "type": "git",
