--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
     "compilerOptions": {
         "outDir": "dist",
         "target": "es2019",
+        "declaration": true,
         "esModuleInterop": true,
         "jsx": "react",
         "jsxFactory": "h",
