--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Read .sav files (SPSS, PSPP) in a browser or in node.js",
   "main": "./dist/index.js",
   "types": "./dist/index.js",
-  "keywords": ["sav", "spss"],
+  "keywords": [
+    "sav",
+    "spss"
+  ],
   "scripts": {
     "build": "webpack"
   },
@@ -12,7 +15,9 @@
     "type": "git",
     "url": "git+https://github.com/mhermher/savvy.git"
   },
-  "files": ["dist/"],
+  "files": [
+    "dist/"
+  ],
   "author": "Mher Alaverdyan",
   "license": "BSD-2-Clause",
   "bugs": {
@@ -27,6 +32,12 @@
     "ts-loader": "^8.0.4",
     "tslint": "^6.1.3",
     "typescript": "^4.0.3",
+    "webpack-cli": "^4.5.0",
     "webpack-node-externals": "^2.5.2"
+  },
+  "dependencies": {
+    "typedoc": "^0.20.28",
+    "typedoc-webpack-plugin": "^1.1.4",
+    "webpack": "^5.24.3"
   }
 }
