--- a/package.json
+++ b/package.json
@@ -31,13 +31,11 @@
     "babel-loader": "^8.1.0",
     "ts-loader": "^8.0.4",
     "tslint": "^6.1.3",
+    "typedoc": "^0.20.32",
+    "typedoc-webpack-plugin": "^1.1.4",
     "typescript": "^4.0.3",
+    "webpack": "^5.26.0",
     "webpack-cli": "^4.5.0",
     "webpack-node-externals": "^2.5.2"
-  },
-  "dependencies": {
-    "typedoc": "^0.20.28",
-    "typedoc-webpack-plugin": "^1.1.4",
-    "webpack": "^5.24.3"
   }
 }
